<resources>
    <string name="app_name">musicguide_1</string>
    <string name="metal1">Название данного музыкального жанра наверняка знакомо многим, появился он примерно в 1970 годах в Англии и США. Метал – разновидность рок-музыки. Он имеет большое количество стилей, от более классических (heavy metal) до тяжелых (black, dead metal) из-за чего пользуется значительной популярностью. Его отличительными чертами являются: агрессивный ритм, виртуозное гитарное соло (солист - центральная фигура композиции), энергичный вокал и эффект “Distortion”.\n\nDistortion - это гитарный эффект, который является основной частью в тяжелой музыке за счет сильного искажения гитарного звучания.\n\nОснователями метала принято считать рок-группу Led Zeppelin.</string>
    <string name="metal2">Дальнейшее развитие жанр получил в лице: Black Sabbath, Deep Purple, Uriah Heep, Judas Priest, Kiss, Aerosmith, Iron Maiden, Motorhead, Rammstein,The Kinks, Alice Cooper, ZZ-Top.</string>
    <string name="metal4">В конце 70-х годов, благодаря таким группам, как Iron Maiden и Motorhead, метал приобретает свою более тяжелую форму.</string>
    <string name="metal3">Led Zeppelin - Communication Breakdown</string>
    <string name="metal5">Black Sabbath - Paranoid</string>
    <string name="metal6">Kiss - I Was Made For Lovin’ You</string>
    <string name="jazz1">Джаз - жанр музыки, зародившийся в начале 20 века в США. Его основой послужила смесь Африканской (африканские народные песни, ритмы, танцы) и Европейской культур. Одна из ключевых особенностей жанра, из-за чего он и обрел такую популярность – это постоянная импровизация и разнообразие ритмов в произведении, благодаря чему жанр имеет большое количество течений.\n\nВозник джаз в Новом Орлеане, где среди множества исполнителей того времени особо выделялся Луи Армстронг – джазовый трубач, вокалист, руководитель ансамбля, оказавший большое влияние на развитие жанра.</string>
    <string name="jazz2">Примерно в 30-е появляется такой термин, как Свинг. Свинг – одно из направлений жанра, где акцент делается на слабую долю, в связи с чем, музыка приобретает раскачивающий, волнообразный характер. Наибольшее развитие в жанр принес Бенни Гудмен, или как его называли - “Король свинга”.</string>
    <string name="jazz3">В 40-е возникает новый стиль Бибоп, ярко выделяющийся среди других направлений музыки. Ему были присущи невероятно быстрые мелодии, долгая импровизация, сложнейшие ритмические рисунки. Среди исполнителей этого времени выделяются Чарли Паркера и Диззи Гиллеспи.</string>
    <string name="jazz4">В 50-е появляется Кул-Джаз (возвращение к классике). Главными представителями этого направления стали Майлз Дэвис, Чет Бейкер, Дэйв Брубек.</string>
    <string name="jazz5">Бибоп  же получил свое развитие в лице Хард-бопа, благодаря таким музыкантам, как Арт Блэйки, Сонни Роллинз, Джон Колтрейн.</string>
    <string name="jazz6">Louis Armstrong - Christmas Night In Harlem</string>
    <string name="jazz7">The Benny Goodman Swing Quintet – Whispering </string>
    <string name="jazz8">Charlie Parker – Bebop</string>
    <string name="jazz9">Miles Davis - Summertime</string>
    <string name="bluze1">Блюз – музыкальный жанр, возникший в США в 20-х годах XX века. Уже по названию данного жанра можно судить о том, что же он из себя представляет. С английского блюз переводится примерно как “депрессия”, “уныние”, “тоска”. Связано это с тем, что афроамериканцы использовались в качестве рабов, таким образом, они отражали тяжесть своей жизни в песнях, именно так и возник блюз. </string>
    <string name="bluze2">Блюз – импровизационный жанр, где главной фигурой является вокал. Тем не менее, жанр обладает особенным каркасом, основой.Очень часто музыка строится по структуре “вопрос – ответ”, где инструменты как бы отвечают друг другу.</string>
    <string name="bluze3">Существует много разновидностей блюза, самыми яркими из которых являются городской блюз, ритм-н-блюз и блюз-рок. Если городской блюз по образу был схож с оригинальным блюзом, то ритм-н-блюз появился путем добавления джазовых ритмов и стиля буги-вуги. Один из самых знаменитых исполнителей данного поджанра – Чак Берри. Блюз-рок –направление блюза, родоначальником которого является Джимми Хендрикс. Для этого стиля характерно очень громкое и агрессивное звучание электрогитар и драйв.</string>
    <string name="bluze4">В нашей стране на сегодняшний день существуют такие блюз-группы, как: Cradle Rock, Зоопарк, Юрий Наумов, Ляпин-Блюз, Ноль, Ravonts, Апачи блюз.</string>
    <string name="bluzesong1">Chuck Berry – House of Blue Lights</string>
    <string name="bluzesong2">Jimi Hendrix - Bleeding heart</string>
    <string name="bluzesong3">Апачи Блюз - Вуду блюз</string>
    <string name="pop1">Поп-музыка – направление музыки, в основном ориентированное на широкую аудиторию, массы, в связи с чем, оно включает в себя многие музыкальные жанры. Основные особенности – это простота, легкость мелодии. Песни строятся по схеме куплет и припев. Ключевая музыкальная единица в поп-музыке – песня.  Многие песни создаются для танцев и клипов, поэтому имеют четкий, запоминающийся бит.</string>
    <string name="pop2">В различное время отражением поп-музыки являлись различные музыкальные жанры. В 1950-е в России – это эстрада, в США - джаз (Фрэнк Синатра).  В 1970-е настоящим прорывом стало появление стиля “диско” (ABBA, Boney M, Dschinghis Khan, Bee Gees). Благодаря развитию музыкального телевидения в 1980-е в США появляются такие яркие поп певицы, как: Мадонна, Шер, Бритни Спирс.</string>
    <string name="pop3">В настоящее существует множество музыкальных поп-групп, таких как: One Direction, Pink, Katy Perry, Taylor Swift, Justin Bieber, Rihanna, Shakira, OneRepublic.</string>
    <string name="pop4">К-поп (корейская поп музыка)  - одно из популярных направлений современной поп-музыки. Почти во всех песнях, даже в спокойных и лирических, есть элементы рэпа. Ниже перечислены одни из самых популярных к-поп групп: F(x),  BLOCK B, VIXX, 2NE1, BTS, EXO, SEVENTEEN. </string>
    <string name="popsong1">Britney Spears - Baby one more time</string>
    <string name="popsong2">Katy Perry - I kissed а girl</string>
    <string name="popsong3">F(x) - Electric shock</string>
    <string name="classic1">Понятие классической музыки очень размыто. В общем - это музыка, остающаяся популярной на протяжении многих лет. С точки зрения истории классическая музыка – это музыкальное творчество 18 и 19 веков. Тем не менее, классическая музыка начала формироваться задолго до этого, выделяют несколько периодов в ее развитии.</string>
    <string name="classic2">Ренессанс (1400-1600) - появляется инструментальная музыка. В это время создаются произведения таких композиторов, как: Томас Луис де Виктория, Шекспир. Завершается данный этап появлением ансамблей, зарождается опера.</string>
    <string name="classic3">Барокко (1600-1750)- для данного периода  характерны сложные музыкальные формы, полифония (многоголосная музыка). Получает свой расцвет опера, становятся популярными следующие композиторы: Иоганн Себастьян Бах, Антонио Вивальди, Георг Фридрих Гендель.</string>
    <string name="classic4">Классицизм (1750-1830) - стремление к возвышенному. Для произведений характерна гармоничность, сбалансированность, уравновешенность. К данной эпохе относят следующие имена композиторов: Моцарт, Гайдн, Бетховен.</string>
    <string name="classic5">Романтизм (1700-1850) – появляется интерес к народной жизни, получает свое развитие жанр баллады. Композиторы эпохи: Шуберт, Вагнер, Чайковский, Шопен.</string>
    <string name="classic6">В 20 веке появляется склонность к экспериментам, зарождаются такие понятия, как атонализм (отказ от логики тональности) и алеаторика (случайная последовательность элементов в композиции). Их композиторов особенно можно выделить Рахманинова.</string>
    <string name="classicsong1">Бах - Токката и фуга ре минор (BWV 565)</string>
    <string name="classicsong2">Моцарт - Маленькая ночная серенада</string>
    <string name="classicsong3">Чайковский - Лебединое озеро</string>
    <string name="disco1">Диско – танцевальный музыкальный жанр, одно из самых популярных направлений поп-культуры XX века. История диско начинается с 1970-х. На его появление и развитие повлияли такие музыкальные жанры, как: фанк и соул (поджанры ритм-н-блюза). Главная особенность диско заключается в том, что на первом месте стоит ритм, а слова лишь задают настроение и сопровождают мелодию.</string>
    <string name="disco2">Больше всего повлияли на развитие жанра следующие исполнители и группы: Донна Саммер (королева диско), Bee Gees, Глория Гейнор, Village People, Chic, The Jackson 5.</string>
    <string name="disco3">В СССР стиль диско стартовал приблизительно с 1980-х. Одними из самых популярных  советских групп принято считать: Здравствуй песня, Красные маки, Верасы, Весёлые ребята, Мираж.</string>
    <string name="discosong1">Donna Summer - I Feel Love</string>
    <string name="discosong2">Bee Gees - Stayin Alive</string>
    <string name="discosong3">Мираж - Музыка нас связала</string>
    <string name="electricmusic1">В данном разделе я бы хотел рассказать об основных жанрах электронной музыки, таких как: транс, хаус и техно.</string>
    <string name="electricmusic2">Транс – направление электронной танцевальной музыки, особенностью которой является искусственность звучания,  и наличие глубокой ритмической мелодии, как бы погружающей слушателя в состояние транса. Транс считается очень разносторонним стилем музыки, из-за чего имеет множество подстилей. Популярные исполнители: Armin van Buuren, ATB, Tiesto, Chicane, BT.</string>
    <string name="electricmusic3">Хаус – направление электронной клубной музыки, отличающееся от транса простыми  танцевальными циклически повторяющимися мелодиями. Этот стиль произошел от соула и диско. Популярные исполнители: Daft Punk, Deadmau5, Alan Walker, Avicii, Swedish House Mafia.</string>
    <string name="rap1">Думаю, каждый имеет представление, что же такое рэп, но я думаю, что сказать, что это, все же стоит. Рэп — музыкальный жанр, являющийся сочетанием ритмичной музыки (бита) и наложенного на нее речитатива. Рэп — один из основных элементов стиля хип-хоп, именно поэтому он часто используется,  как его синоним. Тем не менее, рэп встречается и в других жанрах. </string>
    <string name="rap2">Появился жанр в 1970-х, как это ни странно, в Америке, куда его привезли ямайские диджеи. В частности – Кул Герк. Читали рэп тогда с одной единственной целью – для удовольствия. Далее стали появляться рэп-баттлы , а жанр начали приобретать все большую популярность.</string>
    <string name="rap3"> Основоположником современного рэпа считают  Grandmaster Flash. Он начал использовать такой эффект, как скретч – ручное подергивание звуковой дорожки, записанной на пластинку. Далее – группа Last Poets, которая также считается революционером рэп культуры. </string>
    <string name="rap4">Королями репа же по праву считаются Run DMC. Первый альбом данной группы сразу же стал золотым. Далее появляется  гангста-рэп – агрессивный стиль, в основном посвященный криминальной тематике.</string>
    <string name="rap5">Далее в музыке стиля рэп был изобретен джи-фанк - стиль, характеризующийся  медленным ритмом, женским бэк-вокалом и глубоким басом. Основоположником его стал Dr.Dre.  Он же  впоследствии стал продюсером и подарил миру таких звезд, как Snoop Dog, Eminen и Тупак Шакур. </string>
    <string name="rap6">Среди русских рэперов можно выделить следующих исполнителей: Oxxxymiron, Noize MC, Каста, Guf, Баста, Тимати, Скриптонит, Ак-47.</string>
    <string name="rapsong1">DJ Kool Herc – It Takes Two</string>
    <string name="rapsong2">D.M.C. - Its Tricky Run</string>
    <string name="rapsong3">Snoop Dogg - Smoke Weed Everyday</string>
</resources>