<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.test.musicguide_1.rap">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:scaleType="fitXY"
            android:src="@drawable/rap1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap1"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap2"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/rap1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rapsong1"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonrap1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playrap1"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonrap1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauserap1"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonrap1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stoprap1"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap3"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/rap2" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap4"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <TextView
            android:id="@+id/rap2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rapsong2"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonrap2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playrap2"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonrap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauserap2"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonrap2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stoprap2"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap5"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="380dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/rap3" />
        <TextView
            android:id="@+id/rap3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/rapsong3"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonrap3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playrap3"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonrap3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauserap3"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonrap3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stoprap3"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/rap6"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>