<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.test.musicguide_1.classic">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:scaleType="fitXY"
            android:src="@drawable/classic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/classic1"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/classic2"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/classic3"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:src="@drawable/classic1" />
        <TextView
            android:id="@+id/classic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/classicsong1"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonclassic1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playclassic1"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonclassic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauseclassic1"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonclassic1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stopclassic1"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/classic4"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/classic2" />
        <TextView
            android:id="@+id/classic2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/classicsong2"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonclassic2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playclassic2"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonclassic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauseclassic2"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonclassic2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stopclassic2"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/classic5"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/classic3" />
        <TextView
            android:id="@+id/classic3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/classicsong3"
            android:lineSpacingMultiplier="1.3"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center" />
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/startbuttonclassic3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="playclassic3"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/start_states"/>

            <Button
                android:id="@+id/pausebuttonclassic3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pauseclassic3"
                android:layout_weight="1"
                android:background="@drawable/pause_states"/>

            <Button
                android:id="@+id/stopbuttonclassic3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="stopclassic3"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/stop_states"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/classic6"
            android:lineSpacingMultiplier="1.3"
            android:gravity="center"/>
    </LinearLayout>
</ScrollView>